# logger

./: .clang-tidy  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
.github/workflows/: build.yml
config/: logger_config.h
doc/: LoggerArchitectOverview.md  logger_architecture.puml
doc/logger_core_layer/: CoreBigPictureDiagram.puml  CoreDataFlow.puml  CoreProcessingOverview.md
example/: CMakeLists.txt  main.cpp
include/: ConsoleBackend.h  FileBackend.h  ILogBackend.h  Log.hpp  LogFormatter.h  LogFormatter.hpp  LogLevel.hpp  Logger.hpp  logger.h
include/platform/: PlatformDetect.h
platform/: platform_detect.h
scripts/: act_local_run.sh  build_docker.sh  build_native.sh  check_clang_format.sh  docker_prepare.sh  get_coverage_report.sh  run_dev.sh
scripts/docker/: act-images-dev-Dockerfile  base-images-Dockerfile  development-env-Dockerfile
src/: ConsoleBackend.cpp  FileBackend.cpp  LogFormatter.cpp  Logger.cpp  logger.cpp  logger_core.c  logger_linux.c  logger_mcu.c
test/: CMakeLists.txt  ConsoleBackendTest.cpp  FileBackendTest.cpp  LogFormatterTest.cpp  LoggerTest.cpp  test_c.c  test_core.cpp  test_cpp.cpp  test_logger.cpp
